<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="2"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            android:id="@+id/product_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#546061"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#fff"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_marginHorizontal="12dp"
                    android:src="@drawable/ic_undraw_functions_egi3" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:text="@string/product"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bag_cv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:backgroundTint="#546061"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:divider="#fff"
                android:gravity="center"
                android:orientation="vertical"
                android:showDividers="middle">

                <ImageView
                    android:layout_width="160dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_marginHorizontal="12dp"
                    android:background="@drawable/ic_undraw_travel_mode_7sf4" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="5dp"
                    android:gravity="center"
                    android:text="@string/bag"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/calculator_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="#546061"
        android:layout_marginVertical="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="#fff"
            android:gravity="center"
            android:orientation="vertical"
            android:showDividers="middle">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="160dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/ic_calculator_flatline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:layout_marginVertical="5dp"
                android:gravity="center"
                android:text="@string/product_rate_calculator"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>